@@ -1,3 +1,7 @@
+* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 0.1.0
+- Support puppetlabs/concat 6.x and puppetlabs/stdlib 6.x.
+- Drop Puppet 4 support
+
 * Mon Mar 25 2019 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.0.7
 - replaced simpcat with concat
 - make sure the version of concat is updated
